--- a/Module 3 Lesson 1.ipynb
+++ b/Module 3 Lesson 1.ipynb
@@ -72,6 +72,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy\n",
+    "from matplotlib import pyplot\n",
+    "from matplotlib import rcParams\n",
+    "rcParams['font.family'] = 'serif'\n",
+    "rcParams['font.size'] = 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rho_green_light(nx, rho_light):\n",
+    "    rho = numpy.arange(nx)*2./nx*rho_light         #Before stoplight\n",
+    "    rho[int((nx-1)/2):]=0\n",
+    "    return rho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZgAAAEYCAYAAABhi+CNAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xd0VOXWx/HvphdFBRWxYfcVRRS99hLbVbCLvXPtdFTs\nAna5inTF3juKhWI3dq8dK4oKdlBAlF6S/f5xDsMkJpNMMjNnJuf3WSsreU7dHsnsnKeauyMiIpJp\n9aIOQERE6iYlGBERyQolGBERyQolGBERyQolGBERyQolGBERyYoGUQeQDWamvtciIjXg7papa9XZ\nNxh3z/uvAQMGRB6D4lScilMxLv/KtDqbYEREJFpKMCIikhVKMBEqKiqKOoRqUZyZpTgzqxDiLIQY\ns8GyUe8WNTPzuvjfJSKSTWaGq5FfRETynRKMiIhkhRKMiIhkhRKMiIhkhRKMiIhkReQJxszamNlz\nZlYadSwiIpI5kSYYMzsCeBvYCKi0X7GZNTezkWY22cw+DxNSu5wFKiIiaYv6DaYfsC/wVhXHjQG2\nBjq4+1bAe0CxmbXJcnwiIlJDUSeYXd39u1QHmNl+wP7A5e6+ONx8FVAfuCTL8YmISA1FmmDcvTrt\nLl2AJSS95bj70rDcJUuhiYhILUX9BlMd7YFf3X1Zue1TgdZmtnoEMYmISBUKIcGsDsytYPvf4fdW\nOYxFRESqqRASjIiIFKBCWDJ5JlBRb7EW4fdZFZ00cODAxM9FRUWxnS5bRKQyxcXFFBcXZ+36eTFd\nv5ndDZzs7vUr2HcL0BVYKbkdxsyeAbZ397UrOEfT9YuIpCmO0/U/CTQEdlm+wcwaArsSjI8REZE8\nlC8JptKM6e4vAs8DV5lZ03DzZcAy4LocxCYiIjUQaRuMmf0X2A9YLyx/FO7aoVy35COBQcAnZrYM\n+BkocvffchmviIhUX160wWSa2mAkH5SWlvLeF9PYbP3WtFyledThiFQp020whdCLTKTgLFtWQpcL\nbuWZ1yfRtk0rpoy9ioYN/tGHRaROy5c2GJE6w93pPuhhnnl9EgA//DaLb36YEXFUIrmnBCOSYYPu\nfZ7bxr5RZtuSpeVnOhKp+5RgRDLo4efe4+KRY/+xfcmykgiiEYmWEoxIhrz+0TecesW9Fe7TG4zE\nkRKMSAZ8NfU3Dj3vlkQiabdRGzr+3/qJ/Uv1BiMxpAQjUkszZv1N594jmDN3AQBrtWrBhGE9WX3V\nlRLH6A1G4kgJRqQW5i9czEF9RzLt12DO1WZNGjFuaA/atmlFo4YruiUvWao3GIkfJRiRGiopKeW4\nS+7ggy9/AKBePeOx689kuy3aAtCowYphZnqDkThSghGpAXen942P8uwbnya2jbrgOA7crX2i3Kjh\nigSjNhiJIyUYkRoY/MCLjHq8OFG+8JT9OfvIPcsckzxyX92UJY6UYETS9PhLH9Jv2BOJ8jH7bc+1\n3Q/7x3Fl22BURSbxowQjkoa3PvmWk/rflSjvvu0m3DPwVOrV++evUnIVmRKMxJESjEg1ffPDDA45\n72YWLwmSxeZtW/PUjd1o0rhhhccnv8GoDUbiSAlGpBp+n/03nXoNZ/Zf8wFYs+XKTBzeK+U0/GXa\nYNRNWWJICUakCgsWLeGQc2/m+19mAtC0cUPGDenBhuusnvI8dVOWuFOCEUmhpKSUEy67k/99PhUI\nxro8cu0Z/GvLDao8t0wjv6rIJIaUYERSOHfI4zxV/EmiPPz8Yzhkzw7VOlfjYCTulGBEKjH0oZcY\n/sgrifL5J+1H96P3qvb5ZdtgVEUm8aMEI1KBJ1/5iHOHjEmUj9p3Owb1PCKta6ibssSdEoxIOe98\n+h0nXH4X7g7Arh025r4rulY41iWVRg2SuymXZjRGkUKgBCOSZMqPMzi47ygWLV4KwKbrr8lTgysf\n65KKqsgk7pRgREIz58yjc++RzArHuqyxWjDWJXldl3SUqSJbpgQj8aMEIwIsXLSEQ84dxbc//Q5A\nk8YNeeambmy87ho1vqbWg5G4U4KR2CspKeWk/nfzzqffA2BmPHT1aezUfqNaXVfdlCXulGAk9voN\nG8MTr3yUKA859ygO32vbWl9XbTASdwWRYMxsezObYGZfmNkkM/ufmR0ZdVxS+EY88gpDHno5Ue59\n3N70Pm6fjFy7bDdlvcFI/OR9gjGztsBLwO/AVu7eAbgLeMzMDow0OCloTxd/Qu/BjyXKh++1DYP7\nHJWx6zcqs+CY3mAkfqqdYMws9cx+2dMZWBm4ycOBCe5+K/A3cHxEMUmB+9/nUznu0jsSY112ar8h\nD1x1GvXrZ+5vLrXBSNyl89tUnK0gqrD8T7/yAxHqAfURSdN3P//BwX1HsTAc67LxumvwzE3dadak\nUUbvozYYibt0EsyGZjbFzG4ws/ZZi+ifHgEmA5eZWXMLXAo0Am7JYRxSB8yaM4/OvUbwx59zAWi1\nSnMmDu/JGqutnPF7qZuyxF06CeYboCPwFTDCzD40s75mtmZ2Qgu4+1xgX6ApMBOYAZwK7Ofur2Xz\n3lK3LFq8lEPPu5lvfpwBQONGDXjmpu5sun7rrNxPc5FJ3KWTYLZz97nufpe7FwFdgJWAV81svJkd\nbWaNMx2gmW0GvAdMBVZ19zWBy4CxZrZ/pu8ndVNpaSmnDLybtyZ9BwRjXR686jR26bBx1u6pNhiJ\nuwZVHxJw99Jy5Wlm9jawKXAc0AmYYWbjgNvc/f0MxXg1sArQx90Xh/d+1MyOAe41s7XLxwYwcODA\nxM9FRUUUFRVlKBwpRBeNGMtjL36YKN/Yuwtd9umY1XuWaYNRgpE8VFxcTHFxcdaub8t70VR5oNlE\nd+9kZlsCJxP04FobmA48BNxP0FbSGegOvOPu/WsdoNmXAO7ertz264F+wGbu/l25fV7d/y6p+25+\nvJjugx5OlHscXcTwfsdiZlm97/SZf9HmgAsAWLPlysx44cas3k+ktswMd8/YL0a132CA7c3sI6AD\nsBAYS5BUXir3BvEU8JSZfQrUOsEQjH/pYGb1yt1nA8CBPzNwD6mjnn19Ej1veCRRPmSPDgw975is\nJxdQFZlIOm0wqwGzgK5Aa3c/yd1fqKh6ysx6AzWfJbCsEUAL4Mqk6+8FHA484u6zM3QfqWPe/2Ia\nx15yB6Wlwdvsv9ptwMPXnp7RsS6pqBeZxF06bzBvu/t+1Tx2OnBGDeL5B3d/wswOAC4ysy+AEqAU\nuJgg+Yj8w9RfZnJQ35EsWLQEgA3XWZ1nh2R+rEsqGgcjcZdOghlX0UYzOxgYAvR29/EQNMJnILYE\nd38ReDGT15S6a/Zf8+ncewS/zw7GuqzWohkTh/WkdasWOY2jYZkVLUtw95xUzYnki3TqCo6tZPvL\nwDnAdbUPR6R2Fi9ZyuH9bmHytOlA0A7y9OBubL7BWjmPpV69ejRIqo5bVqJlkyVeal0Z7e4LgNeA\njI+BEUlHaWkpXa+4l9c/mpLYdu/AU9l9200ji0nVZBJnKavIwsb63mFxbTP7vqLDgNUJBkOKROay\nW57m4edXDL8a1PMIjt3/XxFGFLxBLZ/zbMnSZTRvqr/DJD6qaoOZRvB2AnBI0s/JlhKMsr8jc2GJ\npOe2J1/nurufS5TPOXJP+p387wgjCmhNGImzlAnG3Z8GngYws+fcvWtOohJJw4Q3P6Nb0kDKA3dr\nz/DzczPWpSrJXZU1FkbiptptMO5+QKr9ZrZ17cMRSc9Hk3/k6ItvpyRsQN9ui/V55NrTadAgP1Zy\nUBuMxFkmR5zdk8FriVTph99mcWDvEcxfuBiAtm1aMW5ID1Zq1iTiyFZo1CCpikxvMBIzVTXy3wDM\ncPcbzWwqwdQslVk7o5GJpDBn7gI69x7B9Fl/A7Dqys2YMKwHa62+SsSRlVV2NL/eYCReqmrk3xv4\nIfy5BfBMJccZcFCmghJJZcnSZRzRbzRffv8bEDSkP3XjObTbKP/+xtF8ZBJnVTXyb5dUnJKqkd/M\n3s1YVCKVcHdOu/I+Xv3g68S2uwecwp7bbRZhVJVTG4zEWTqN/DvVZr9IJvQf/QwPTPxfonxt98M4\n/oAdIowoNU14KXFW7bnIzKwJsCbwt7vPsaAPaFdga+AVd6+s+kwkI+586k2uvnNConzm4btz0akp\nOzdGTlVkEmfp9CK7BPiKIKkAXEAwuPJkYIyZnZrZ0ERWeP6dLzjrugcT5QN22ZJRFx6XF2NdUinT\ni0xVZBIz6SSYzsDu7j7EzOoD5xIsLrY6sCPQKwvxifDJ1z9x5IW3Jsa6bLv5ejx23Zl5M9YlFS2b\nLHGWToIxd/8o/HkvgsRyrbuXuvvHBD3JRDLqp+mzObDPSOYtCMa6rNd6NcYN7cHKzfNnrEsq6qYs\ncZZOgmloK+ojugKT3f2DGl5LpEp/zVtI594j+PWPOQC0aN6ECcN6svYaq0YcWfWpDUbiLJ0Fx94B\nxpnZT8AxQF9INP6fBfyZ+fAkrpYuK+HIC27l8+9+BYKqprE3nsNWm6wTcWTp0RuMxFk6bx3nA78B\nuwK3AqPC7SOBPmiqGMkQd+fMa+7npfe+Smy78/KT2ftf/xdhVDVTdhyM3mAkXqr9BuPuc4HTK9j+\nj20itXHl7eO459l3VpTPPoSTDizMYVbqRSZxlrF2EzO7J1PXkvi6d9w7DLxtXKL8n0N25bLTOkcY\nUe1oun6Js3TaYDCzTYE9gdZA+T6i0a/uJAXtpf99xelX3Zco/3undoy+5IS8H+uSiropS5ylM5K/\nOzCcyrsjp5ppWSSlz779hS4XjGZZONZl603X5fHrzyzzAV2Iyq5oqSoyiZd0G/nPBtYA6rt7veQv\n4NOsRCh13i+//0nn3iP4e/4iANZZc1XGD+1Bi5WaRhxZ7SnBSJylU0X2l7vfnmL/8bUNRuLn73kL\nObDPSH6eEfRyXzkc67Ju69UijiwzGjVQG4zEVzpvMP8zs7Yp9h9W22AkXpYuK+Goi25j0jc/A9Cg\nfj2eGHQWW2+6bsSRZY66KUucpfMGMwl42sxeBqYAC8rtPwu4LlOBSd3m7pxz3YO88O6XiW23XXoi\n++3ULsKoMq9MFdkyVZFJvKSTYEaG37euZH9WG/nNrAvBhJrNgJbAbGCouz+Y8kTJS9fcOYE7n34r\nUe5/xoF0PWTXCCPKDnVTljhLJ8F8RTCjckUMGF/7cCq5uFlf4ATgYHf/LZzN+V5gH0AJpsDcP/5d\nLh+9Yvmgkw/ciYFnHhxhRNlTtpFfCUbiJZ0EM9zdf6hsp5ldkYF4KrruBgRVb7u4+28A7l5iZucD\n+bcIu6T0yvuTOS1prMs+O/wft192UkGPdUlFSyZLnKUzVcytVex/rPbhVOgk4M+kpQKW3286MD1L\n95Qs+OK7Xzmi3+hEVdFWG6/NE/89u8xf+XWN3mAkztKaKsbMNjOzu8zsezP7Ptx2pZkdkZ3wANgZ\nmGZmR5jZ62b2pZm9ZWZdqzxT8savf8yhU6/h/DVvIQBrr7Eq44f1ZJU6MNYlFXVTljhLZyT/v4BX\nCablnwxsHO56CxhqZubuT2Q+RNYDNgDOAw5z9z/M7EjgYTNby93Vcy3PzVuwiIP6jOSncKzLSs0a\nM35oD9Zfq2XEkWWfepFJnKXzBnM9MABo6+77AXMA3P15gnnIzs18eAA0Ieg5dr67/xHecwzwNHBJ\nuB6N5Klly0o4+qLb+fjrnwCoX78eYwadxTabrxdxZLmhNhiJs3Qqv9d398EV7XD3n7L4QT83/D6p\n3PaPgcOBdsBH5fYxcODAxM9FRUUUFRVlJzqplLvTfdDDTHz788S20RefwP47bxlhVLlVdsExVZFJ\nfikuLqa4uDhr108nwTQ0s3ruXlp+h5k1BFbPXFhlTAY68M+3reW/rRW+hSUnGInGoHuf57axbyTK\nl53WmdMP2y3CiHJPSyZLPiv/x/cVV2S2M3BaU8UAY8xsw+SNZrYqcDvwZiYDS/Js+L38AM/2wELg\niyzdV2rhoefe4+KRYxPlEzvtyJVnHxJhRNHQZJcSZ+nOprw98K2Z/QZsbmbfEnQV3gPol4X4AB4F\n3geuNrPmAGa2O9AFuNrdF2bpvlJDr334DV2vuDdR3mv7zbmz/8l1dqxLKpqLTOIsnXEwP5nZNgSN\n+fsQVInNBB4Chrj7n9kI0N1LzewAYBDwhZktBBYD3dz9rmzcU2ruq6m/cdj5tyT+Wm+3URuevKFu\nj3VJpVGZBcf0BiPxktZvvbvPBi4Lv3LG3ecQTKYpeWz6zL/o1GsEc+YG86Cu1aoFE4b1ZNWVm0Uc\nWXTUBiNxltZAy1TMbFzVR0ldNX/hYg7qO5IffpsFQPOmjRk3tAdt27SKOLJoqYpM4qzSNxgz65/m\ntTrWMhYpUMuWlXDsJbfz4Vc/AlCvnvHYdWew3Raplg+Kh7LdlFVFJvGSqopsYAXbnGDm5Ipkdbp+\nyU/uTq8bH2XcG58ltt184fF03q19hFHlD1WRSZylqiKb5O71ln8BOxD06NoNWDXcthqwO0FX4n2z\nHq3knRvvf4FbxryWKF906gGc1WWPCCPKL+qmLHGW6g3mwnLlQUBnd1+8fIO7/wW8ZWbHAi8SJB+J\nicde/IALhj+ZKB+3/7+4ptuhEUaUf8q0wegNRmKm0jcYd3+h3Kb1kpNLuWMXAq0zGZjktzc/+ZaT\n+t+dKO/RcVPuHnAK9eplrN9IndCg/ornUVJSSmnpPybCEKmz0vk0qGdmJ1e0w8xOyVA8UgC+njad\nQ8+7OVHl838brMXYG86hcaOGEUeWf8xM7TASW+mMg7kauMfMLiSYXHIOQRtMR2BzQEkmBmbM+ptO\nvUcw+6/5AKzZcmUmDOtJy1WaRxxZ/mrUsH4iGS9ZWqJELLGRzkj+e8xsOtAfOCY8dynBNC4HuPuL\n2QlR8sWCRUs45NxRTP1lJgDNmjRi/NAebLhOtuY5rRs0Zb/EVboj+Z8DnjOzeoRTxVQ0u7LUPSUl\npRx/6R2898U0IBjr8si1p7N9uw0ijasQlF10TFVkEh81miAqTCq/ZzgWyVPuTp/Bj/L0ayuW5BnR\n71gO3qNDhFEVDi2bLHGlLj9SpSEPvsTIx4oT5X4n/ZtuRxVFFk+h0VgYiSslGElpzEsfcv6wJxLl\no/fbjut7Hh5hRIVHbTASV0owUqm3J33Hif3vwj2YBWjXDhtz78CuGuuSJnVTlrjSJ4VUaMqPMzjk\n3FEsXhL8xb3p+mvy9OBuNGmsLrbpKjvhpRKMxEetE4yZtchEIJI//vhzLp16jWBWONZl9VVXYsKw\nnrRadaWIIytMjRqoDUbiqdoJxsxONLPZZvZjuV3Pm9l9ZtYkw7FJBBaGY12++/kPAJo2bsi4oT3Y\nZL01I46scGk+MomrdN5gTgLuArYot70zMB+4PlNBSTRKSko58fK7ePezqUAwzclD15zOjlttGHFk\nhS25ikxtMBIn6YyDWcvd9y+/0d3/NLOewAeZC0ui0G/YGJ589eNEedh5R3NY0TYRRlQ3qJuyxFU6\nbzCNK9vh7suAprUPR6Iy7OGXGfLQy4ly3+P3oeexe0cYUd2hbsoSV+kkmL/N7OCKdpjZgcBfmQlJ\ncm3sqx/T96bHE+Uue3fkht5HRhhR3aJeZBJX6VSRXQmMNbNXCKrDZhPMprw9sBdwRObDk2x797Pv\nOf6yOxNjXXbeeiPuv7Ir9eurB3umJPciUxuMxEk6symPM7PjgBuB/ZJ2/Qgc7+7jMx2cZNd3P//B\nwX1HsWjxUgA2WS8Y69K0SaOII6tb1AYjcZXubMpjgDFmtjkrZlP+OiuRSVbNnDOPTr2GM3POPABa\nrdKcicN7ssZqK0ccWd2jbsoSVzWqB3H3r939reTkYmaXZS4syaZFi5dy2Hk3M+XHYELsJo0b8sxN\n3TXWJUvKtsHoDUbiI+UbTDh4ssTdl5rZHlVc62SCVS+zzszeAHYFNnD38gM/JYXS0lJOHnA3b036\nDgjGujxw5X/YpcPGEUdWd2kuMomrqqrIvgKmETTiFwNeyXGWYl9GmVkXguSSk/vVNReOeJLHX/ow\nUR7c50i67NMxwojqPr3BSFxVlWCGEvQWA/gOOL2S4wy4PVNBVcbMGgLXAeMJZhCQNIx67FVuvH/F\nytY9j9mLPsfvE2FE8VB2HIzeYCQ+Kk0wZjYc2BnYLdx0t7u/luL4uzMcW0V6AO8BU1CCScuzr0+i\n142PJsqH7tmBIecejZlFGFU8qJuyxFWqRv79gUPcfXFYrmoq3cer2F8rZtYSOB+4OJv3qYve/2Ia\nx15yB6WlQa3iv9ptwEPXnK6xLjlSpopsmarIJD5SfcIsdvffksoHVHGtR6vYX1v9gfvc/acs36dO\nmfrLTA7qO5IFi5YAsOE6qzNuaHeaaaxLzpQdB6M3GImPVG0ws83sPuBNYBHQ0sxOImhvqUjLTAe3\nnJltChzJP2dylhRm/zWfzr1H8PvsuQC0XKU5E4f1ZM2WWsInlzQXmcRVqgTTHXgEODEsO3BviuOz\n2avreuA6d59b3RMGDhyY+LmoqIiioqLMR5XHFi9ZyuH9bmHytOkANG7UgKcHd2PzDdaKOLL4UTdl\nyVfFxcUUFxdn7fqVJhh3/wJob2arEMw5lqrnloX7M87Mdge2Ao4ud7+UkhNM3JSWlnLqwHt5/aMp\niW33XdGV3bbZJMKo4quRepFJnir/x/cVV1yR0etXqxeZu08zs+Hu/kMVx2fDvgRtRe+HPZ4MWP5n\n+AQzWwJc4u7PZen+BefSm5/mkRfeT5T/2+sIjt5v+wgjijfNRSZxlaqKbH+gKKkXWdsqrvVKZkIq\ny90HAAOSt5nZAIJG/05q9C/r1ide5/p7VuTabkftyfkn/TvCiKTsXGRKMBIfhdSLLNnyKjL1s00y\n4c3P6DbooUT5oN3bM+y8YzTWJWJaMlniqiB6kS1nZp2Aa4HW4abxZrbE3WM/18lHk3/k6ItvT4x1\n2W6L9Xnk2jNokPTXs0RD3ZQlrlIlmG7kTy+y4AbuE4GJ2b5Pofnht1kc2HsE8xcGtZlt27Ri3JAe\nNG9a6SrXkkPqpixxlaoX2ZfA1lH3IpPU/vx7Pp16jWD6rL8BWHXlZkwc3pO1Vl8l4shkOb3BSFxV\nueCYu/8F/BVhLzKpxOIlSzmi32i+mho0lTVq2ICnbjyHLTZsE3Fkkiy5m7LaYCROqt1I7u63VnHI\nH7WMRdLg7px21X0Uf/hNYtvdA05hz+02izAqqUiZNxj1IpMYSWvJ5OXMrDVQvoL/SuDJWkck1XL5\nLU/z4MT3EuXrehzO8QfsEGFEUhlN1y9xVe0EY2aNgUHAaUCzrEUkVbrjqTe55q4VfR3OPHx3Ljxl\n/wgjklTUTVniKp03mP5AR4Ip8y8JywBtCBYieyazoUlFnnv7c86+7sFEufOuWzHqwuM01iWPaSS/\nxFU6CeZAYHd3n2tmZ7l7osuymd0DVNVGI7X0ydc/cdRFt1FSUgpAx/9bn0ev01iXfKcEI3GVzkj4\n0qTZjMskJnefDqydsajkH36aPpsD+4xk3oJgrMv6a7Vk3NAerNSsScSRSVXKThWjKjKJj3QSjJnZ\n8oVEZpnZoUk79mXFBJSSYX/NW0jn3iP49Y85AKyyUlMmDOtJG411KQjqpixxlU4V2ZvAW2Z2AHAn\n8KSZfUYwgr89oHEwWbBk6TK6XDCaz7/7FQj+Gh574zlsubFeGAuFqsgkrtJJMAOBTYDZ7v6Ama0E\nnETQXfkagjnCJIPcnTOuvp+X35uc2HZX/5PZa/vNI4xK0lW+m7K7q1OGxEI6CWbX8Hs9AHcfDYzO\neESScMVt47hv/LuJ8lVnH8KJnXeKMCKpifr161GvnlFa6rg7JSWl6pghsZBOG8xTQFegaZZikSR3\nP/MWV9w+LlE+7dBdufS0yqaCk3ynZZMljtJJMJPd/XB3n5m1aASAF9/9kjOveSBR3n/ndtxy8Qmq\nVilgjdSTTGIonQTzrZmtXNlOM7szA/HE3qdTfqbLhbeyLBzr0mGzdXnsujPL1ONL4VFDv8RROm0w\nQ4AHw0GVk4F55fbvmKmg4urnGX/SufcI5s5fBMC6rVdj/NAetFhJtZKFTmvCSBylk2BeDr8fmI1A\n4u7veQs5sM9Ifvk9GOvSonkTJgzryTprrhZxZJIJaoOROEonwfzEivnHyjOCbsxSA0uXlXDURbfx\n6ZSfAWhQvx5P/Pds2m+yTsSRSaYkT3ipGZUlLtJJMC8kzz9Wnpm1y0A8sePunH3tg7zw7peJbXdc\nfjL77rhFhFFJpqmKTOIoZYIxs+VvLN+6+xmpjnX3CzIWVYxcc+cE7nrmrUR5wBkHccpBO0cYkWRD\nowaqIpP4qaoX2TkE1V/qH5sF949/l8tHr1jl4NSDd2bAmQdFGJFkS5kqMiUYiYmqqsimu/sVOYkk\nZl55fzKnXXVforzvDltw6yUnaqxLHaVuyhJHVb3BeHUvZGYX1zKW2Pjiu185ot/oRFVJ+03WYcx/\nzyrzISR1i9pgJI6q+kRrZGbrUb0qshOA62ofUt326x9z6NRrOH/NWwjA2musyvihPVhFY13qNC2b\nLHFUVYJpB0zLQRyxMHf+Ig7qM5KfZvwJwErNGjN+aA/WW6tlxJFJtiU38qubssRFVQlmBtWbMdmA\nM2sfTgUXNusAdAd2A5YC9QkGfV5VSPOiLVtWwtEX38bHX/8EBDPsjhl0Fttsvl7EkUkuqA1G4ihj\njfzhQmTZ8CjwGdDR3ReZWRvgFWB/M+vg7ouzdN+McXe6D3qY597+IrHt1otPYP+dt4wwKsklLZss\ncZSxRn53z9ZCJaXABe6+KLzPb8ANwKZAQcxff/09z3Hb2DcS5ctO68xph+0WYUSSa2qDkTiqbiP/\nInf/IxcBVWBrdy9fp/ArQbVc3k/U9dBz73HJqKcS5RM77ciVZx8SYUQSBVWRSRxV9QazEvAa8N8c\nxFKhCpILwOYEbzav5zictLz24Td0vWLF7Dp7bb85d/Y/WWNdYqjsXGRKMBIPKd9g3H2DHMVRbWZW\nD/gPcIe7fxt1PJX5aupvHHb+LYkPk3YbteHJG87WWJeYKjsORlVkEg/pLDiWL/oDS4C+UQdSmekz\n/6JTrxGQF6uoAAARdklEQVTMmbsAgLVatWDCsJ6sunKziCOTqGguMomjgvpz2sy6AkcCe7r7wlTH\nDhw4MPFzUVERRUVFWY1tuXkLFnFgn5H88NssAJo3bcz4YT1p26ZVTu4v+UlVZJKPiouLKS4uztr1\nCybBmNlJBG8te7n7rKqOT04wubJsWQnHXnIHH03+EYB69YzHrjuDjv+3fs5jkfxSppFfbzCSJ8r/\n8X3FFZmderIgqsjM7ESgH7DP8t5sZnagmaVcQiCX3J1eNz7K+Dc/S2y75aLj6bxb+wijknyR3Aaj\nKjKJi7x/gzGzE4DbgMuAfyf1wNqdoLtyXrjhvhe4ZcxrifLFXQ/gzCP2iDAiySfqpixxlPcJBhgO\nNCYYXFleXiwl8OgL73PhiCcT5eP2/xdXn3NohBFJvmmk2ZQlhvI+wbh7XreOv/HxFE4ecE+ivGfH\nzbh7wCnUq1cQtY+SI+qmLHGkT8FamDxtOoeed3PiL9L/22Atxt54No0bNYw4Msk3yVVkaoORuFCC\nqaEZs/6mc+8R/Pl3MNaldTjWZbUWzSOOTPJR2SWTVUUm8aAEUwPzFy7m4L6jmPpLsFpAsyaNGDek\nOxuus3rEkUm+KtvIrzcYiQclmDSVlJRy/KV38v6X04BgrMsj157O9u02iDQuyW9aMlniSAkmDe5O\nn8GP8szrkxLbRvQ7loP36BBhVFII1AYjcaQEk4YhD77EyMeKE+XzT9qPbkcVRRaPFI5G6kUmMaQE\nU01jXvqQ84c9kSgfvd92DOp5RIQRSSEpO1WMqsgkHpRgquHtSd9xYv+7cA8W+Ny1w8bcO7CrxrpI\ntakNRuJIn5BVmPLjDA45dxSLlwQfCput35qnB3ejSWONdZHq05LJEkdKMCn88edcOvUaway/5gOw\nxmorM3F4T1qtulLEkUmhUTdliSMlmEosXLSEQ84dxXc//wFA08YNeXZIdzZad42II5NCpMkuJY6U\nYCpQUlLKCZffybufTQXAzHj4mtPZcasNI45MCpWm65c4UoKpwPlDxzD21U8S5WHnHc2hRdtEGJEU\nujLdlJVgJCaUYMoZ9vDLDH345US57/H70PPYvSOMSOoCVZFJHCnBJBn76sf0venxRPmIvbblxj5H\nRhiR1BVlJrtUI7/EhBJM6N3Pvuf4y+5MjHXZeeuNeOCq/2isi2SE2mAkjvTpCXz70+8c3HcUixYv\nBWCT9dbk6cHdaNqkUcSRSV2hKjKJo9gnmJlz5tG59whmzpkHQKtVmjNxeE/WWG3liCOTuqT8G8zy\nN2WRuizWCWbhoiUceu7NTPnxdwCahGNdNllvzYgjk7rGzGhQf8Wvm6rJJA5im2BKS0s5ecDdvP3p\nd0DwAfDAlf9h5603jjgyqas0Zb/ETWwTzAXDn2TMyx8lyoP7HEmXfTpGGJHUdWqHkbiJZYIZ+eir\nDH7gxUS517F70+f4fSKMSOJAXZUlbmKXYJ55bRK9Bz+aKB9WtA039T0KM4swKokDTdkvcROrBPP+\nF9M49pLbKS0NevDsuNWGPHj1adSvH6vHIBFRG4zETWw+Waf+MpOD+o5kYTjWZaN1VueZm7rRTGNd\nJEc0H5nETSwSzOy/5tOp13B+nz0XgJarNGfi8F6s2bJFxJFJnKiRX+KmIBKMma1hZg+Y2WQz+8rM\nHjezdapz7qLFSzn0vJv5+ocZADRu1IBnBndjs7atsxqzSHmaLkbiJu8TjJk1BF4CGgJbAO2A+cCr\nZtYs1bmlpaWcOvAe3vzk28S2+6/8D7tus0kWIxapWNleZHqDkbov7xMMcCqwFXCBh4ALgY2Ac1Kd\neMmop3j0xQ8S5Rt6d+GofbfLYqgildOyyRI3hZBgjgB+dPcflm9w9xnAl0CXyk4aPeY1Bt37fKLc\n7ag9Oe/E/bIZp0hKjRqoDUbipRASzNbA1Aq2TwXaV3ZS9/8+nPj54N23Zth5x2isi0RKbTASNw2q\nPiRyqwMfVLD9b6CZmTV298Xldy4f67J9u7Y8fO3pNEj65RaJQnIbzLNvfMqP02dHGI1I9hVCgqmx\nDdZuxbghPWjetHHUoYiUaYMZ/cTrEUYikhuFUEU2E6hocZYWwIKK3l4AmsyaROcNF3PLiJsoLi7O\nZnwi1dJ+k2r1rBfJnbm/wq8frPjKsEJ4g/kU2LyC7RsCn1V20vNP3MceHTfLWlAi6epz3D40a9Io\nsf6QSL659dITM3o9y/eV9czsDGA0sKG7/xhuaw38DFzo7jdVcI7n+3+XiEi+MTPcPWO9oQohwTQE\n3ge+Ak4EHLgT2AXY1t0XVHCOEoyISJoynWDyvg3G3ZcC+wElBGNfvgBWAvauKLmIiEh+yPs3mJrQ\nG4yISPpi9wZTlxVK7zbFmVmKM7MKIc5CiDEblGAiVCj/6BRnZinOzCqEOAshxmxQghERkaxQghER\nkayos438UccgIlKIYjUORkRECpOqyEREJCuUYEREJCuUYGLMzNqY2XNmVhp1LKkUSpwihcDM3jCz\nUjNbP9v3KoTZlBPMbA1gCLA9wZxknwN93P2XapzbABgAHAksJViw7EJ3fyvP4pwGJK9EZeE1znf3\nVzIY4xHAYIJnkVZDXI6fZW3inEZunmUHoDuwG0Gc9YGXgavcfWYV5+byWdYmzmnk4FmG99oI6AYU\nhfdoAcwArnf3CVWcm8vnWZs4p5Gj51nuvl2AXanm71Ktn6e7F8QX0BCYBDxK8D/DgHuAb4Bm1Th/\nNDAZaBmWTwPmA1vnWZzf5+h5vgNsDNwNlKR5bk6eZQbizNWznAw8DjQJy20IJmedDDTOo2dZmzhz\n8izDe3UHfiSYQX35tmuBZcDuefQ8axNnzp5n0j0bhp9DzxLM7bh+Nc6p1fPM6X9gLR/OGeFDaZu0\nrXX4P/O8Ks7dLDz3lHLbPweezZc4w2Nz9aFYL/ye1gd3Lp9lbeLM8bP8MvlDJtz2n/A5HZ5Hz7JG\ncebyWYb3Ogz4T7ltqwClwI159DxrFGeun2fSPfsCDxC8kVSZYDLxPAupDeYI4Ed3/2H5BnefQfBL\n06Ua5wIUl9v+CvBvM2uWqSCpXZw54+41bc/I5bOsTZy5tLW7Ty237VeCt9fVUpyX02dJzePMKXd/\nyt3vKrd5lfB7qtXacv1vs6Zx5pyZtQTOBy5O47RaP89CSjBbA+V/OQi3ta/i3PYEf1X8WMG5DYB2\ntY5uhdrECWBmNsjM3jKzyWb2vJkdnMH4aiuXz7K2cvIs3X1ZBZs3J3hOr6c4NafPshZxQoT/Ls1s\nHWAk8AFwc4pDI/23mUac4eE5fZ79gfvc/ac0zqn18yykBLM6MLeC7X8DzcyscRXnLvDw/a7cuQCt\nMhBf8r1qGicEjYQfuvuuwJbA08DTZtYtgzHWRi6fZW1F8izNrB5B1dMd7v5tikMjfZZpxAkRPEsz\n28jMphB8wNUjqMabl+KUSJ5nDeKEHD5PM9uUoJH+2jRPrfXzLKQEEwvuvpO7Pxb+XOLuNwMTgGvN\nrFG00RWWCJ9lf2AJQZ13Pqt2nFE8S3f/3t03Jah2mgJ8ama7ZONetVGTOHP8PK8HrnP3iv7wzapC\nSjAzgZUr2N6CIMsuruLcZmZWfo6dFuH3WRmIL/leNY2zMv8Lr7llbQLLkFw+y2zI6rM0s64Efy0e\n4O4Lqzg8smeZZpyVycm/S3ef5+59Cf7qT1X1FOm/zTTirEzGn6eZ7Q5sRdAbLLG5mqfX+nkWUoL5\nFNiggu0bAp9V49x6wHoVnLuMoAE+U2ocp5k1MbPmFewqCb/Xr11oGZHLZ1ljUTxLMzuJ4G1gL3ev\nzodZJM8y3Thz/SzNrEkluz4DtjKzhpXsz+nzrGmcOX6e+xI8k/fN7CMz+xg4K9w3Idx2QCXn1vp5\nFlKCeRJomzz61MxaA1sAY5IPNLM1y2XdseH3onLX3At43t0X5EmcxxAMKixve2AxEXx4R/wsqy3q\nZ2lmJwL9gH3c/Y9w24FmdkaKGHP+LGsYZ67/XU40sx0r2L4h8Le7L60kzlw/z5rGmbPn6e4D3H1T\nd+8Yfm3LireZTuG25yqJs/bPM5f9sGvzRTBI6BPgYYIMX49gbMTXJA1gBHYhyK6jyp1/C8GgslZh\nuSvBgKH2+RIncAowB9guadsx4XEDsvRc76GS8SVRP8vaxJnLZwmcACwAzg1/Xv41GuifL8+ypnHm\n+t8l8CrwHOHgvnBbL4K/8Afk0fOsUZxR/J6Xi3sg/xyrl5XnWTBTxbj7UjPbj2AKli8Jus99Duzt\nZTPpPIL/eb+Wu0QPggFGb5nZEoKeXvu5e1XVa7mMcyKwLnBz+Hq9GsF0Eme5+52ZjNPM/gvsR/j6\na2Yfhbt28BXdWSN9lrWMM2fPEhgONAZuqGDfFSlihBw+y1rEmctnCXAJcDpQbGbLgKYE7QEnuPsj\nKeKE3D7PmsaZ6+cJgJl1IuhJ1jrcNN7Mlrh7x0rihFo+T60HIyIiWVFIbTAiIlJAlGBERCQrlGBE\nRCQrlGBERCQrlGBERCQrlGBERCQrlGBERCQrlGBERCQrlGBERCQrlGAkFsxsDTP72MxmmVlpOIvs\nJ2b2pZm9Zmbnlp/h1syGmNn7ad5nFTMbYGZbZ/a/QKTwKMFILLj7Hx7MJPtMUPSO7r6Nu7cDegOH\nAZPMbLOk06YD09K81aoEczdtk4GwRQqaEozEnrt/AuxNMNnfhOXrfLj7IHc/Ks3LVXcxJ5E6TwlG\nBAhnZu4PbAScbmYjzeyHsDoteW2fnc2s2Mw+DKvcJprZYeG+w4DxgANXhvs/MrMW4f5LzOx/Zva+\nmX1qZg+a2dpJ194uPGexmd1tZueb2dtm9ouZjTazMrOfh9Vxt5jZtLC6b5KZ3WRmbZOOWc3Mbg+P\nmWxm76ZYYEoks7K99oC+9JVPXwRr81S2rkwTYCkwLiyfQrBuxvpheSWCadWPSzpnEPBKUrktwRIN\nJ1Vw/dnAluHPBtwEfEg4q3nScVOBX4DOYXmLMK7Tk45pCHwAFANNw22bECzX2yssNwI+At4Gmofb\njgyvtWfU/y/0Vfe/9AYjEnL3RQTrebSt5JDNCdpYpiZtu4lyK5WGKqoq28ndvwjv5cBtwLYEKxmW\nN8PdJ4THfgVMpuzKgieH517s7gvD474FbiVYOGr5MR2AS919fnjMGILENKCS/0aRjCmYBcdEciRV\nG8rXBG8IT5vZCOBRd58C3FzNa7cys7EEbxpLCRb/coJqufK91b4pV57NioWiIFhrHYJkkeDu/ZOK\n+4TXf6fctb4ATjSz+u5egkiW6A1GJGRmTYFWwA8V7Xf3ecAOwJPAecDXYZvKLtW49tbAK8AUoIMH\nqwh2JkhojSs4pfx656UES3AvtzqwwMN13yuxOkGCeTtsC/ooXBF0T2AWwUqKIlmjNxiRFf5N8CE+\nvrID3P0n4Bwz6wN0IViCdoKZbeDuc1Jc+1iCNpFr3L00A7HOBJqZWcMUSWYmUBomM5Gc0xuMCBB2\nTb4S+A64q5JjtjKziwHcfbG7PwT0BVYGNggPW/5hb+E5Hc1sU4LkUl6bWoT8Yvh9u3IxXmhmfZOO\naWBmW5Y7ZlszG12Le4tUixKMxM0/2ljMbHvgZaAZQc+txZUc2wo418w2Cc8zYDeCAZlfhcfMABYC\n64blYcCOwISwfG54biPgAoIqrJq4n6AH2jVm1iy85lZAL+CFcscMNrOVwmNaAsOT4hXJGgs6s4jU\nbWa2BsEH73oEbQ+TWNH+MRMYC9y2vLeVmY0EDgqP/4qgt9hTwMUEVWklBF2FpxL05Poi6V5nAJcA\ncwka64939yVmdjpBUikBfgYmAjcAPwEPAXcATxB0S54HvObuXczsLaB9ePlvgR3cfVk4vuZ6oBPw\nZ3jO5e7+WlIsy4/pHB6zFLjT3W+t5SMVqZISjIiIZIWqyEREJCuUYEREJCuUYEREJCuUYEREJCuU\nYEREJCuUYEREJCuUYEREJCuUYEREJCuUYEREJCuUYEREJCv+HyE4x+o8JeKlAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fd29252deb8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nx=81\n",
+    "nt=30\n",
+    "dx=4.0/(nx-1)\n",
+    "x=numpy.linspace(0, 4, nx)\n",
+    "\n",
+    "rho_max=10.\n",
+    "u_max=1.\n",
+    "rho_light=10.\n",
+    "rho = rho_green_light(nx, rho_light)\n",
+    "pyplot.plot(x, rho, color='#003366', ls='-', lw=3)\n",
+    "pyplot.ylabel('Traffic density')\n",
+    "pyplot.xlabel('Distance')\n",
+    "pyplot.ylim(-0.5, 11.);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def computeF(u_max, rho_max, rho):\n",
+    "    return u_max*rho*(1-rho/rho_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def ftbs(rho, nt, dt, dx, rho_max, u_max):\n",
+    "    rho_n = numpy.zeros((nt, len(rho)))\n",
+    "    rho_n[0, :] = rho. copy()\n",
+    "    for t in range(1, nt):\n",
+    "        F= computeF(u_max, rho_max, rho)\n",
+    "        rho_n[t, 1:]= rho[1:]- dt/dx*(F[1:]-F[1:])\n",
+    "        rho_n[t, 0]= rho[0]\n",
+    "        rho = rho_n[t].copy()\n",
+    "    return rho_n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
