--- a/Moduel 3 lesson 2.ipynb
+++ b/Moduel 3 lesson 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZgAAAEYCAYAAABhi+CNAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH29JREFUeJzt3XmcXGWd7/HPNwuBEPYgwgzrCIwsiSzXhWUoBBRQFIG5\nOAIqI44ic1UQ9cIgaZZhEREvMiqKiI46LiiiBlAEG0dwAYOAQBCUICOLBARCErL17/5xTpLqSlV1\nna5zTtXp/r5fr3p11XO2X5506pdnOc9RRGBmZpa3Cb0OwMzMxiYnGDMzK4QTjJmZFcIJxszMCuEE\nY2ZmhXCCMTOzQkzqdQBFkOS512ZmoxARyutcY7YFExF9/5o1a1bPY3CcjtNxOsaVr7yN2QRjZma9\n5QRjZmaFcILpoVqt1usQOuI48+U481WFOKsQYxFURL9br0mKsfjnMjMrkiTCg/xmZtbvnGDMzKwQ\nTjBmZlYIJxgzMyuEE4yZmRWi5wlG0uaSbpA01OtYzMwsPz1NMJKOAG4DtgNaziuWtK6kyyTNlfS7\nNCHtVFqgZmaWWa9bMB8GDgRuHWG/q4EZwMyI2AX4NTAoafOC4zMzs1HqdYLZOyL+0G4HSQcBrwc+\nFhFL0uJzgInA6QXHZ2Zmo9TTBBMRnYy7HAkspa6VExHL0s9HFhSamZl1qdctmE7sCjwWEcsbyh8G\nNpM0vQcxmZnZCKrwwLHpwIIm5c+nPzcB5pcXjpn1gyeffp5v/Ph2nnthca9DsRaqkGDMzNZw9Glf\n4JY5v+91GNZGFRLMfKDZbLH1059PNztoYGBg1ftarTZul8s2G6tuu7vt/CDrxILHkldBqpBg7gb2\nkDSpYRxmW+DJiGjaPVafYMxsbFm2fAXLlq8AkiXmz3jXoT2OaGw458Q353q+KiSY7wL/AuwF/AxA\n0mRgb+BrPYzLzHpk4eIlq95PmzqFs9/7ph5GM3acc2K+5+uXWWQtH3ATETcCPwLOkbROWnwGsBw4\nv4TYzKzP1CeYdddeq4eRWDs9bcFI+jhwELBl+nlOuumVDd1hRwEXAr+VtBz4H6AWEY+XGa+Z9YeF\ni5euer/uOlN6GIm109MEExEf6XC/RcD/KTgcM6uIYS0YJ5i+1S9dZGZmHVv4Yn0Lxl1k/coJxswq\nZ/gYjFsw/coJxswqZ3gXmVsw/coJxswqx4P81eAEY2aV4xZMNTjBmFnlDBvk9xhM33KCMbPKeWHR\ni6veuwXTv5xgzKxyPAZTDU4wZlY5C1+sW4vMCaZvOcGYWeW4BVMNTjBmVjmeRVYNTjBmVjluwVSD\nE4yZVU79GIwTTP9ygjGzyvHzYKrBCcbMKsddZNXgBGNmleNB/mpwgjGzyhn+PBi3YPqVE4yZVY6f\naFkNTjBmVikrVgyxZOlyACSxzpTJPY7IWnGCMbNKqW+9TF17LST1MBprxwnGzCpl+PiLB/j7mROM\nmVWKx1+qwwnGzCrFN1lWhxOMmVWKb7KsDicYM6sU32RZHU4wZlYpwwb513YLpp9VIsFI2lPSdZLu\nlXSXpF9JOqrXcZlZ+TzIXx19n2AkbQ38BPgLsEtEzASuBL4l6Q09Dc7MSucusuroOMFIml5kIG0c\nCqwHfDIiAiAiLgeeB97Wo5jMrEc8yF8dWVowg0UFMYLl6c/G9SAmABNLjsXMeswtmOrIkmC2lfSg\npIsk7VpYRGv6BjAXOEPSukr8G7AW8NkS4zCzPlA/yD/NLZi+liXB/B7YHbgf+LSk30g6WdJLigkt\nERELgAOBdYD5wJPAO4GDIuKWIq9tZv3Hg/zVkSXB7BERCyLiyoioAUcC04CfSpot6X9Lyv1vW9IO\nwK+Bh4ENI+IlwBnANZJen/f1zKy/eQymOiZ1umNEDDV8nifpNmB74J+AQ4AnJf0Q+HxE3J5TjOcC\nGwAfjIgl6bW/Kelo4MuStmiMDWBgYGDV+1qtRq1WyykcM+slLxWTn8HBQQYHBws7v9KJWSPvKF0f\nEYdI2hl4O8kMri2AJ4CvA/9JMlZyKHAS8IuIOLPrAKX7ACJip4byC4APAztExB8atkWnfy4zq5Y3\nfvAyZv/8HgCuvfh9vGm/mT2OaOyQRETk9vyDjlswwJ6S5gAzgcXANSRJ5ScNLYjvAd+TdDfQdYIh\nuf9lpqQJDdfZBgjgrzlcw8wqwrPIqiPLGMxGwNPA8cBmEXFcRPy4WfeUpA8Am+YU46eB9YGz686/\nP/AW4BsR8UxO1zGzCvAYTHVkacHcFhEHdbjvE8C7RxHPGiLiO5IOBv6vpHuBFcAQcBpJ8jGzcWTh\ni55FVhVZEswPmxVKOgy4BPhARMyGZBA+h9hWiYgbgRvzPKeZVdOwFowH+ftali6yt7Yovwk4ETi/\n+3DMzNrzfTDV0fVilxGxCLgF8N+0mRXOg/zV0baLLB2s/0D6cQtJf2y2GzCd5GZIM7PCDA0NsXjJ\nslWfp7qLrK+NNAYzj6R1AvCmuvf1lpHcZX9FfmGZma1pUd06ZOtMmcyECX3/xJFxrW2CiYhrgWsB\nJN0QEceXEpWZWROeolwtHaf/iDi43XZJM7oPx8ysNQ/wV0ue7curcjyXmdka6pfq9wB//xtpkP8i\n4MmI+ISkh0mWZmlli1wjMzNrMHyhS7dg+t1Ig/yvBR5J368PfL/FfgLemFdQZmbNeIpytYw0yL9H\n3ccH2w3yS/plblGZmTXhQf5qyTLI/+putpuZdcstmGrpeC0ySWsDLwGej4hnJYlkZeUZwM0R0ar7\nzMwsF8MG+T0G0/eyzCI7HbifJKkAfITk5sq3A1dLeme+oZmZDecWTLVkSTCHAvtGxCWSJgKnkDxc\nbDrwKuD9BcRnZraK74OpliwJRhExJ32/P0liOS8ihiLiTpKZZGZmhakf5J/mBNP3siSYyem4CyTd\nZHMj4o5RnsvMLDM/bKxasjxw7BfADyU9ChwNnAyrBv/fA/w1//DMzFYbPk3ZYzD9Lkur41TgcWBv\n4HLgP9Lyy4AP4qVizKxgHoOplo5bMBGxADihSfkaZWZmRfCNltWS27iJpKvyOpeZWTPDxmD8sLG+\nl2UMBknbA/sBmwETGza/Lq+gzMyacRdZtWS5k/8k4FJaT0dut9KymVnXPMhfLVkH+d8LbApMjIgJ\n9S/g7kIiNDNLuQVTLVm6yJ6LiC+02f62boMxM2tn+APHnGD6XZYWzK8kbd1m++HdBmNm1s4LizzI\nXyVZWjB3AddKugl4EFjUsP09wPl5BWZmVi8iWOQWTKVkSTCXpT9ntNhe6CC/pCNJFtScCmwMPAN8\nKiK+VuR1zaw/LF6yjIjka2bKWpOYONGrU/W7LAnmfpIVlZsRMLv7cFqcXDoZOAY4LCIeT1dz/jJw\nAOAEYzYOeIC/erIkmEsj4pFWGyWdlUM8zc67DUnX214R8ThARKyQdCqwRRHXNLP+MyzBePylErIs\nFXP5CNu/1X04TR0H/LXuUQErr/cE8ERB1zSzPuNlYqonUyempB0kXSnpj5L+mJadLemIYsID4DXA\nPElHSPqZpPsk3Srp+BGPNLMxw0+zrJ4sd/L/L+CnJMvyzwX+Lt10K/ApSYqI7+QfIlsC2wAfAg6P\niKckHQX8l6SXRoRnrpmNA74HpnqytGAuAGYBW0fEQcCzABHxI5J1yE7JPzwA1iaZOXZqRDyVXvNq\n4Frg9PR5NGY2xg0fg3GCqYIsg/xbRcTFzTZExKMFftEvSH/e1VB+J/AWYCdgTsM2BgYGVr2v1WrU\narViojOzUriLLH+Dg4MMDg4Wdv4sCWaypAkRMdS4QdJkYHp+YQ0zF5jJmq2tFenPpq2w+gRjZtXn\nQf78Nf7n+6yz8p0MnGmpGOBqSdvWF0raEPgC8PM8A6vzg/Rn4w2euwKLgXsLuq6Z9RG3YKon62rK\newIPSXoc2FHSQyRThf8B+HAB8QF8E7gdOFfSugCS9gWOBM6NiMUFXdfM+kj9IP80t2AqIct9MI9K\negXJYP4BJF1i84GvA5dExF+LCDAihiQdDFwI3CtpMbAEeF9EXFnENc2s//hO/urJ9ETLiHgGOCN9\nlSYiniVZTNPMxiknmOrJbbU4ST/M61xmZo2GDfJ7qZhKaNmCkXRmxnPt3mUsZmYtLXzRLZiqaddF\nNtCkLEhWTm6m0OX6zWx8Gz5N2S2YKmjXRXZXRExY+QJeSTKjax9gw7RsI2BfkqnEBxYerZmNWx6D\nqZ52LZiPNny+EDg0Ilb9LUfEc8Ctkt4K3EiSfMzMcucbLaunZQsmIn7cULRlfXJp2HcxsFmegZmZ\n1Rs2BuNB/krIMotsgqS3N9sg6R05xWNm1pRbMNWT5T6Yc4GrJH2UZHHJZ0nGYHYHdgScZMysMF4q\npnqy3Ml/laQngDOBo9Njl5Es43JwRNxYTIhmZh7kr6Ksd/LfANwgaQLpUjHNVlc2M8tTRPiBYxWU\nKcGslCaVv+Qci5lZU0uXLWfFiuT/spMnTWTypIk9jsg6MaoEUwUXf9U9dmZjxWK3XippzCaYUz91\nda9DMLMCeIC/OnJb7NLMrAx7vnzrXodgHRqzLZhTjvHKNWZjzfQNp3H8YXv1OgzrkCK6W6NS0voR\n8XxO8eRCUnT75zIzG28kERGtFjTOrOMuMknHSnpG0p8aNv1I0lckrZ1XUGZmVn1ZxmCOA64EXt5Q\nfiiwELggr6DMzKz6Ou4ik3RXRMxssW0ScEdEvCLP4EbLXWRmZtn1rIsMaDn5PCKWA+t0H46ZmY0V\nWRLM85IOa7ZB0huA5/IJyczMxoIs05TPBq6RdDNwB/AMyWrKewL7A0fkH56ZmVVVpmnKko4CPgFs\nVVf8J+BDEfGdnGMbNY/BmJlll/cYzKjug5G0I6tXU34gr2Dy4gRjZpZdXySYpieSzoiIc3M5WZec\nYMzMsis1waQ3T66IiGWS/mGEc10RETvkFVg7kv4b2BvYJiIab/x0gjEzG4W8E8xIg/z3A/NIBvEH\ngVbf2mqzLVeSjiRJLs4gZmZ9bKQE8ymS2WIAfwBOaLGfgC/kFVQrkiYD5wOzSVYQMDOzPtUywUi6\nFHgNsE9a9KWIuKXN/l/KObZm/hX4NfAgTjBmZn2t3Y2WrwfeFBFL0s/TRjjXt/MJqTlJGwOnAqcV\neR0zM8tHuwSzJCIer/t88Ajn+mYO8bRzJvCViHi04OuYmVkO2o3BPCPpK8DPgReBjSUdRzLe0szG\neQe3kqTtgaNYcyVnMzPrU+0SzEnAN4Bj088BfLnN/kXO6roAOD8iFnR6wMDAwKr3tVqNWq2Wf1Rm\nZhU2ODjI4OBgYecf8UZLSRuQrDnWbuaWgNkRsXO+4YGkfYErgJ0iYkVaNgB8DNjW98GYmeWjtPtg\n6meRRcQ8SZdGxCMj7F+EA0nGim6XBEkye2m67TpJS4HTI+KGgq5vZmaj0LIFI+kBoLZyoF/SeRFx\nessTSdtHxIPFhLnGtWaRDPpv02zQ3y0YM7PsynzgWL/NIqu3sgKyPM/GzMxKVIlZZCtJOgQ4D9gs\nLZotaWlE7F70tc3MLJt2XWQ7kcwi2yUtClonF4CIiIn5hjc67iIzM8uu9OX6ez2LbDScYMzMsit7\nNWUi4jnguR7OIjMzswrqeJA8Ii4fYZenuozFzMzGkNE+MnkzYEpD8XURsUuz/cvmLjIzs+xK7yKr\nu/AU4ELgXcDUvAIwM7OxqeMEQ3Jj4+4kS+afnn4G2JzkQWTfzzc0MzOrso67yCT9Ftg3IhZImlN/\n74mklwKXR8SbC4ozE3eRmZllV+ad/I2G6lYzHtbyiYgngC3yCsrMzKovS4KRpPXT909LenPdhgNZ\nvQClmZlZpjGYnwO3SjoY+CLwXUn3kNzhvyvg+2DMzGyVLGMwmwAvA+6OiMWS3gscRzJdeTZwXkQs\nKSzSDDwGY2aWXelLxdRd+E3p25siYmFeARTBCcbMLLteDvJ/DzgeWCevi5uZ2diVpQVzX0TsVHA8\nuXALxswsu162YB6StF6rjZK+mEM8ZmY2RmSZRXYJ8DVJVwFzgRcatr8qr6DMzKz6snSRDaVvWx7g\nB46ZmVVXzxa7BB5l9fpjjQQMdB2NmZmNGVkSzI8j4sutNqaPWDYzMwNG6CKTtLLF8lBEfL2ckLrn\nLjIzs+zKnkV2Ikn3V24XNDOz8WGkFsydEbFbifHkwi0YM7Psym7BdPwtLem0LmMxM7MxZKRB/rUk\nbUlnXWTHAOd3H5KZmY0FI3WRDZGhFeP7YMzMqqvs+2CeBD7XwXkE/Ev34TQ5sTQTOAnYB1gGTARu\nAs6JiPlFXNPMzLqX2yC/pF9GxKtzi2z1eecC9wDHRcSLkjYHbiZJajObPYPGLRgzs+z6dpC/iOSS\nGgI+EhEvptd5HLgI2B44tKBrmplZlzod5H8xIp4qI6AmZkTE8oayx0haMBv1IB4zM+vASC2YacAt\nwMdLiKWpJskFYEeSls3PSg7HzMw61PFqyv1C0gTgTuAXEfHeFvt4DMbMLKNePnCsX5wJLAVO7nUg\nZmbWWpbVlHtO0vHAUcB+EbG43b4DAwOr3tdqNWq1WqGxmZlVzeDgIIODg4WdvzJdZJKOAz4MHDDS\nhAN3kZmZZTcuu8gkHUtDcpH0Bknv7m1kZmbWSt93kUk6Bvg8cAbwOmlVct2XZLqymZn1ob7vIpP0\nNLBhi81nRcTZTY5xF5mZWUZ5d5H1fYIZDScYM7PsxuUYjJmZVY8TjJmZFcIJxszMCuEEY2ZmhXCC\nMTOzQjjBmJlZIZxgzMysEE4wZmZWCCcYMzMrhBOMmZkVwgnGzMwK4QRjZmaFcIIxM7NCOMGYmVkh\nnGDMzKwQTjBmZlYIJxgzMyuEE4yZmRXCCcbMzArhBGNmZoVwgjEzs0I4wZiZWSGcYMzMrBBOMGZm\nVggnGDMzK4QTjJmZFaISCUbSppK+KmmupPslfVvS3/Q6LjMza63vE4ykycBPgMnAy4GdgIXATyVN\n7WVsZmbWWt8nGOCdwC7ARyIFfBTYDjixl4GZmVlrSr6v+5ek64G/j4htG8rvBl6IiL2aHBP9/ucy\nM+s3kogI5XW+KrRgZgAPNyl/GNi15FjMzKxDVUgw04EFTcqfB6ZKmlJyPGZm1oEqJBgzM6ugSb0O\noAPzgfWalK8PLIqIJc0OGhgYWPW+VqtRq9WKiM3MrLIGBwcZHBws7PxVGeTfMSK2ayj3IL+ZWY7G\n4yD/d4GtJW21skDSZiT3xFzds6jMzKytKrRgJgO3A/cDxwIBfBHYC9gtIhY1OcYtGDOzjMZdCyYi\nlgEHASuA+4B7gWnAa5slFzMz6w9934IZDbdgzMyyG3ctmLGsyNkbeXKc+XKc+apCnFWIsQhOMD1U\nlV86x5kvx5mvKsRZhRiL4ARjZmaFcIIxM7NCjNlB/l7HYGZWRXkO8o/JBGNmZr3nLjIzMyuEE4yZ\nmRXCCWYck7S5pBskDfU6lnaqEqdZFUj6b0lD9es7FqUKy/WvImlT4BJgT5I1yX4HfDAi/tzBsZOA\nWcBRwDKSB5Z9NCJu7bM45wHP1Bel5zg1Im7OMcYjgItJ6iLTQFzJddlNnPMopy5nAicB+5DEORG4\nCTgnIuaPcGyZddlNnPMooS7Ta20HvA+opddYH3gSuCAirhvh2DLrs5s451FSfTZc90hgbzr8t9R1\nfUZEJV7AZOAu4JskfxkCrgJ+D0zt4PjPAXOBjdPP7wIWAjP6LM4/llSfvwD+DvgSsCLjsaXUZQ5x\nllWXc4FvA2unnzcnWZx1LjClj+qymzhLqcv0WicBfwK2rSs7D1gO7NtH9dlNnKXVZ901J6ffQz8g\nWdtxqw6O6ao+S/0Ddlk5704rZeu6ss3Sv8wPjXDsDumx72go/x3wg36JM923rC/FCenPTF/cZdZl\nN3GWXJf31X/JpGX/nNbTW/qoLkcVZ5l1mV7rcOCfG8o2AIaAT/RRfY4qzrLrs+6aJwNfJWmRjJhg\n8qjPKo3BHAH8KSIeWVkQEU+S/KM5soNjAQYbym8GXidpal5B0l2cpYmI0Y5nlFmX3cRZphkR8XBD\n2WMkrdeN2hxXal0y+jhLFRHfi4grG4o3SH/+pc2hZf9ujjbO0knaGDgVOC3DYV3XZ5USzAyg8R8H\nadmuIxy7K8n/Kv7U5NhJwE5dR7daN3ECSNKFkm6VNFfSjyQdlmN83SqzLrtVSl1GxPImxTuS1NPP\n2hxaal12ESf08PdS0t8AlwF3AJ9ps2tPfzczxJnuXmp9ngl8JSIezXBM1/VZpQQzHVjQpPx5YKqk\nKSMcuyjS9l3DsQCb5BBf/bVGGyckg4S/iYi9gZ2Ba4FrJb0vxxi7UWZddqsndSlpAknX0xUR8VCb\nXXtalxnihB7UpaTtJD1I8gU3gaQb74U2h/SkPkcRJ5RYn5K2JxmkPy/joV3XZ5USzLgQEa+OiG+l\n71dExGeA64DzJK3V2+iqpYd1eSawlKTPu591HGcv6jIi/hgR25N0Oz0I3C1pryKu1Y3RxFlyfV4A\nnB8Rzf7jW6gqJZj5wHpNytcnybJLRjh2qqTGNXbWT38+nUN89dcabZyt/Co9587dBJaTMuuyCIXW\npaTjSf63eHBELB5h957VZcY4Wynl9zIiXoiIk0n+19+u66mnv5sZ4mwl9/qUtC+wC8lssFXFHR7e\ndX1WKcHcDWzTpHxb4J4Ojp0AbNnk2OUkA/B5GXWcktaWtG6TTSvSnxO7Cy0XZdblqPWiLiUdR9Ia\n2D8iOvky60ldZo2z7LqUtHaLTfcAu0ia3GJ7qfU52jhLrs8DSerkdklzJN0JvCfddl1adnCLY7uu\nzyolmO8CW9fffSppM+DlwNX1O0p6SUPWvSb9WWs45/7AjyJiUZ/EeTTJTYWN9gSW0IMv7x7XZcd6\nXZeSjgU+DBwQEU+lZW+Q9O42MZZel6OMs+zfy+slvapJ+bbA8xGxrEWcZdfnaOMsrT4jYlZEbB8R\nu6ev3VjdmjkkLbuhRZzd12eZ87C7eZHcJPRb4L9IMvwEknsjHqDuBkZgL5Ls+h8Nx3+W5KayTdLP\nx5PcMLRrv8QJvAN4FtijruzodL9ZBdXrVbS4v6TXddlNnGXWJXAMsAg4JX2/8vU54Mx+qcvRxln2\n7yXwU+AG0pv70rL3k/wPf1Yf1eeo4uzFv/OGuAdY8169QuqzMkvFRMQySQeRLMFyH8n0ud8Br43h\nmfQFkr+8xxpO8a8kNxjdKmkpyUyvgyJipO61MuO8Hvhb4DNp83ojkuUk3hMRX8wzTkkfBw4ibf5K\nmpNuemWsns7a07rsMs7S6hK4FJgCXNRk21ltYoQS67KLOMusS4DTgROAQUnLgXVIxgOOiYhvtIkT\nyq3P0cZZdn0CIOkQkplkm6VFsyUtjYjdW8QJXdannwdjZmaFqNIYjJmZVYgTjJmZFcIJxszMCuEE\nY2ZmhXCCMTOzQjjBmJlZIZxgzMysEE4wZmZWCCcYMzMrhBOMjQuSNpV0p6SnJQ2lq8j+VtJ9km6R\ndErjCreSLpF0e8brbCBplqQZ+f4JzKrHCcbGhYh4KpKVZL+ffIzdI+IVEbET8AHgcOAuSTvUHfYE\nMC/jpTYkWbvpFTmEbVZpTjA27kXEb4HXkiz2d93K53xExIUR8Y8ZT9fpw5zMxjwnGDMgXZn5TGA7\n4ARJl0l6JO1Oq3+2z2skDUr6Tdrldr2kw9NthwOzgQDOTrfPkbR+uv10Sb+SdLukuyV9TdIWdefe\nIz1miaQvSTpV0m2S/izpc5KGrX6edsd9VtK8tLvvLkmflLR13T4bSfpCus9cSb9s84Aps3wV/ewB\nv/zqpxfJs3laPVdmbWAZ8MP08ztInpuxVfp5Gsmy6v9Ud8yFwM11n7cmeUTDcU3O/wywc/pewCeB\n35Cual6338PAn4FD088vT+M6oW6fycAdwCCwTlr2MpLH9b4//bwWMAe4DVg3LTsqPdd+vf678Gvs\nv9yCMUtFxIskz/PYusUuO5KMsTxcV/ZJGp5UmmrWVfbqiLg3vVYAnwd2I3mSYaMnI+K6dN/7gbkM\nf7Lg29NjT4uIxel+DwGXkzw4auU+M4F/i4iF6T5XkySmWS3+jGa5qcwDx8xK0m4M5QGSFsK1kj4N\nfDMiHgQ+0+G5N5F0DUlLYxnJw7+CpFuucbba7xs+P8PqB0VB8qx1SJLFKhFxZt3HA9Lz/6LhXPcC\nx0qaGBErMCuIWzBmKUnrAJsAjzTbHhEvAK8Evgt8CHggHVPZq4NzzwBuBh4EZkbyFMFDSRLalCaH\nND7vfIjkEdwrTQcWRfrc9xamkySY29KxoDnpE0H3A54meZKiWWHcgjFb7XUkX+KzW+0QEY8CJ0r6\nIHAkySNor5O0TUQ82+bcbyUZE/n3iBjKIdb5wFRJk9skmfnAUJrMzErnFowZkE5NPhv4A3Bli312\nkXQaQEQsiYivAycD6wHbpLut/LJXeszukrYnSS6NNu8i5BvTn3s0xPhRSSfX7TNJ0s4N++wm6XNd\nXNusI04wNt6sMcYiaU/gJmAqycytJS323QQ4RdLL0uME7ENyQ+b96T5PAouBv00//z/gVcB16edT\n0mPXAj5C0oU1Gv9JMgPt3yVNTc+5C/B+4McN+1wsaVq6z8bApXXxmhVGyWQWs7FN0qYkX7xbkow9\n3MXq8Y/5wDXA51fOtpJ0GfDGdP/7SWaLfQ84jaQrbQXJVOGHSWZy3Vt3rXcDpwMLSAbr3xYRSyWd\nQJJUVgD/A1wPXAQ8CnwduAL4Dsm05BeAWyLiSEm3Arump38IeGVELE/vr7kAOAT4a3rMxyLilrpY\nVu5zaLrPMuCLEXF5l1VqNiInGDMzK4S7yMzMrBBOMGZmVggnGDMzK4QTjJmZFcIJxszMCuEEY2Zm\nhXCCMTOzQjjBmJlZIZxgzMysEE4wZmZWiP8PTA7mvA2eJF0AAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f9fcb64b7f0>"
+       "<matplotlib.figure.Figure at 0x7f9fcb0d4278>"
       ]
      },
      "metadata": {},
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -111,9 +111,43 @@
     "    line.set_data(x,y)\n",
     "    return line,"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'line' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-7abc87d15b44>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0manimate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-015a7bdb9e78>\u001b[0m in \u001b[0;36manimate\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'line' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "animate(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
