--- a/homework assignment 3.ipynb
+++ b/homework assignment 3.ipynb
@@ -18,6 +18,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nx = 81\n",
+    "dx = 0.25\n",
+    "dt = 0.0002\n",
+    "gamma = 1.4"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
