--- a/homework assignment 3.ipynb
+++ b/homework assignment 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
        "         8.7654321 ,   9.01234568,   9.25925926,   9.50617284,   9.75308642])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -166,15 +166,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "un = numpy.zeros_like(u)\n",
-    "uplus = numpy.zeros_like(u)\n",
-    "fplus = compute"
+    "uHALF = numpy.zeros_like(u)\n",
+    "fHALF = numpy.zeros_like(u)\n",
+    "f = numpy.zeros_like(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for n in range (1, 51):\n",
+    "    un = u.copy()\n",
+    "    f = computeF(u)\n",
+    "    uHALF[:, :-1] = 0.5*(un[:, 1:] + un[:, :-1] - dt/(2*dx) *(f[:, 1:] - f[:, :-1]))\n",
+    "    uHALF[:, -1] = u[:, -1]\n",
+    "    fHALF = computeF(uHALF)\n",
+    "    u[:, 1: -1] = un[:, 1: -1] - dt/dx* (fHALF[:, 1:-1]- fHALF[:, :-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range (len(x)):\n",
+    "    if x[i] == 2.5:\n",
+    "        print (i)\n",
+    "        print ('rho=', u[0, i])\n",
+    "        print ('u=', u[1, i]/ u[0, i])\n",
+    "        print ('preasure=', (gamma -1)*(u[2, i]-0.5*(u[1, i]**2/u[0, i])))"
    ]
   }
  ],
