--- a/homework assignment 3.ipynb
+++ b/homework assignment 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "x = numpy.arange(-10, 10, 20/nx)"
+    "x = numpy.linspace(-10, 10, nx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -51,29 +51,19 @@
     {
      "data": {
       "text/plain": [
-       "array([-10.        ,  -9.75308642,  -9.50617284,  -9.25925926,\n",
-       "        -9.01234568,  -8.7654321 ,  -8.51851852,  -8.27160494,\n",
-       "        -8.02469136,  -7.77777778,  -7.5308642 ,  -7.28395062,\n",
-       "        -7.03703704,  -6.79012346,  -6.54320988,  -6.2962963 ,\n",
-       "        -6.04938272,  -5.80246914,  -5.55555556,  -5.30864198,\n",
-       "        -5.0617284 ,  -4.81481481,  -4.56790123,  -4.32098765,\n",
-       "        -4.07407407,  -3.82716049,  -3.58024691,  -3.33333333,\n",
-       "        -3.08641975,  -2.83950617,  -2.59259259,  -2.34567901,\n",
-       "        -2.09876543,  -1.85185185,  -1.60493827,  -1.35802469,\n",
-       "        -1.11111111,  -0.86419753,  -0.61728395,  -0.37037037,\n",
-       "        -0.12345679,   0.12345679,   0.37037037,   0.61728395,\n",
-       "         0.86419753,   1.11111111,   1.35802469,   1.60493827,\n",
-       "         1.85185185,   2.09876543,   2.34567901,   2.59259259,\n",
-       "         2.83950617,   3.08641975,   3.33333333,   3.58024691,\n",
-       "         3.82716049,   4.07407407,   4.32098765,   4.56790123,\n",
-       "         4.81481481,   5.0617284 ,   5.30864198,   5.55555556,\n",
-       "         5.80246914,   6.04938272,   6.2962963 ,   6.54320988,\n",
-       "         6.79012346,   7.03703704,   7.28395062,   7.5308642 ,\n",
-       "         7.77777778,   8.02469136,   8.27160494,   8.51851852,\n",
-       "         8.7654321 ,   9.01234568,   9.25925926,   9.50617284,   9.75308642])"
+       "array([-10.  ,  -9.75,  -9.5 ,  -9.25,  -9.  ,  -8.75,  -8.5 ,  -8.25,\n",
+       "        -8.  ,  -7.75,  -7.5 ,  -7.25,  -7.  ,  -6.75,  -6.5 ,  -6.25,\n",
+       "        -6.  ,  -5.75,  -5.5 ,  -5.25,  -5.  ,  -4.75,  -4.5 ,  -4.25,\n",
+       "        -4.  ,  -3.75,  -3.5 ,  -3.25,  -3.  ,  -2.75,  -2.5 ,  -2.25,\n",
+       "        -2.  ,  -1.75,  -1.5 ,  -1.25,  -1.  ,  -0.75,  -0.5 ,  -0.25,\n",
+       "         0.  ,   0.25,   0.5 ,   0.75,   1.  ,   1.25,   1.5 ,   1.75,\n",
+       "         2.  ,   2.25,   2.5 ,   2.75,   3.  ,   3.25,   3.5 ,   3.75,\n",
+       "         4.  ,   4.25,   4.5 ,   4.75,   5.  ,   5.25,   5.5 ,   5.75,\n",
+       "         6.  ,   6.25,   6.5 ,   6.75,   7.  ,   7.25,   7.5 ,   7.75,\n",
+       "         8.  ,   8.25,   8.5 ,   8.75,   9.  ,   9.25,   9.5 ,   9.75,  10.  ])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -174,32 +164,44 @@
    "source": [
     "un = numpy.zeros_like(u)\n",
     "uHALF = numpy.zeros_like(u)\n",
-    "fHALF = numpy.zeros_like(u)\n",
-    "f = numpy.zeros_like(u)"
+    "FHALF = numpy.zeros_like(u)\n",
+    "F = numpy.zeros_like(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-c2698187dd92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mun\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomputeF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0muHALF\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mun\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mun\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0muHALF\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mFHALF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcomputeF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muHALF\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
+    }
+   ],
    "source": [
     "for n in range (1, 51):\n",
     "    un = u.copy()\n",
-    "    f = computeF(u)\n",
-    "    uHALF[:, :-1] = 0.5*(un[:, 1:] + un[:, :-1] - dt/(2*dx) *(f[:, 1:] - f[:, :-1]))\n",
+    "    F = computeF(u)\n",
+    "    uHALF[:, :-1] = 0.5*(un[:, 1:] + un[:, :-1] - dt/(2*dx) *(F[:, 1:] - F[:, :-1]))\n",
     "    uHALF[:, -1] = u[:, -1]\n",
-    "    fHALF = computeF(uHALF)\n",
-    "    u[:, 1: -1] = un[:, 1: -1] - dt/dx* (fHALF[:, 1:-1]- fHALF[:, :-2])"
+    "    FHALF = computeF(uHALF)\n",
+    "    u[:, 1: -1] = un[:, 1: -1] - dt/dx* (FHALF[:, 1:-1]- FHALF[:, :-2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -210,6 +212,15 @@
     "        print ('u=', u[1, i]/ u[0, i])\n",
     "        print ('preasure=', (gamma -1)*(u[2, i]-0.5*(u[1, i]**2/u[0, i])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
