--- a/Module 4 lesson 3-5.ipynb
+++ b/Module 4 lesson 3-5.ipynb
@@ -1,6 +1,80 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "from matplotlib import pyplot\n",
+    "%matplotlib inline\n",
+    "from matplotlib import rcParams, cm\n",
+    "rcParams['font.family']='serif'\n",
+    "rcParams['font.size']=16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def ftcs(T, nt, alpha, dt, dx, dy):\n",
+    "    j_mid = int((numpy.shape(T)[0])/2)\n",
+    "    i_mid = int((numpy.shape(T)[1])/2)\n",
+    "    for n in range(nt):\n",
+    "        Tn = T.copy()\n",
+    "        T[1:-1, 1:-1] = Tn[1:-1, 1:-1]+alpha*\\\n",
+    "        (dt/dy**2*(Tn[2:, 1:-1] - 2*Tn[1:-1, 1:-1]+ Tn[:-2, 1:-1])+\\\n",
+    "         dt/dx**2*(Tn[1:-1, 2:] - 2*Tn[1:-1, 1:-1]+ Tn[1:-1, :-2]))\n",
+    "        T[-1, :]=T[-2, :]\n",
+    "        T[:, -1] = T[:, -2]\n",
+    "        \n",
+    "        if T[j_mid, i_mid]>=70:\n",
+    "            print(\"Center of plate reached 70C at time{0:.2f}s.\", format(dt*n))\n",
+    "            break\n",
+    "    if T[j_mid, i_mid]<70:\n",
+    "        print (\"Center has not reached 70C yet, it is only {0:, .2f}C.\". format(T[j_mid, i_mid]))\n",
+    "    return T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "L = 1.0"
+   ]
+  }
+ ],
+ "metadata": {
+  "anaconda-cloud": {},
+  "kernelspec": {
+   "display_name": "Python [default]",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 1
 }
