practise of module 5 lesson2 3d

--- a/Module 5 lesson 1-2.ipynb
+++ b/Module 5 lesson 1-2.ipynb
@@ -2,6 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from matplotlib import pyplot, cm\n",
+    "from math import pi\n",
+    "import numpy\n",
+    "%matplotlib inline\n",
+    "from matplotlib import rcParams\n",
+    "rcParams['font.family']= 'serif'\n",
+    "rcParams['font.size'] = 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nx = 41\n",
+    "ny = 41\n",
+    "xmin =  0\n",
+    "xmax = 1\n",
+    "ymin = -0.5\n",
+    "ymax = 0.5\n",
+    "l2_target = 2e-7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def poisson_IG(nx, ny, xmax, xmin, ymax, ymin):\n",
+    "   \n",
+    "    dx = (xmax-xmin)/(nx-1)\n",
+    "    dy = (ymax-ymin)/(ny-1)\n",
+    "    \n",
+    "    #mesh\n",
+    "    \n",
+    "    x = numpy.linspace(xmin, xmax, nx)\n",
+    "    y = numpy.linspace(ymin, ymax, ny)\n",
+    "    X, Y = numpy.meshgrid(x,y)\n",
+    "    \n",
+    "    #Source\n",
+    "    L = xmax-xmin\n",
+    "    b = -2*(pi/L)**2*numpy.sin(pi*X/L)*numpy.cos(pi*Y/L)\n",
+    "    \n",
+    "    # Initialize\n",
+    "    p_i = numpy.zeros((ny,nx))\n",
+    "    \n",
+    "    return X, Y, x, y, p_i, b, dx, dy, L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'Laplace_helper'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-4ca868a1e933>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mLaplace_helper\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mL2_rel_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'Laplace_helper'"
+     ]
+    }
+   ],
+   "source": [
+    "from Laplace_helper import L2_rel_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def poisson_2d(p, b, dx, dy, l2_target):\n",
+    "    l2_norm = 1\n",
+    "    iteration = 0\n",
+    "    l2_conv = []\n",
+    "    \n",
+    "    while l2_norm > l2_target:\n",
+    "        \n",
+    "        pd = p.copy()\n",
+    "        \n",
+    "        p[1:-1, 1:-1] = 1/(2*(dx**2 + dy**2)) * \\\n",
+    "                        ((pd[1:-1, 2:] + pd[1:-1, :-2])*dy**2+\\\n",
+    "                        (pd[2:,1:-1]+pd[:-2, 1:-1])*dx**2-\\\n",
+    "                        b[1:-1, 1:-1]*dx**2*dy**2)\n",
+    "        #BCs are automatically enforced\n",
+    "        \n",
+    "        l2_norm = L2_rel_error(pd, p)\n",
+    "        iterations +=1\n",
+    "        l2_conv.append(l2_norm)\n",
+    "    print('Numver of Jacobi iterations: {0, d}'. format(iterations))\n",
+    "    return p, l2_conv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'laplace_helper'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-0c79e1938500>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlaplace_helper\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot_3D\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'laplace_helper'"
+     ]
+    }
+   ],
+   "source": [
+    "from laplace_helper import plot_3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plot_3D' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-2488a49693a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoisson_IG\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mny\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxmax\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxmin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mymax\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mymin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot_3D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_i\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'plot_3D' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X, Y, x, y, p_i, b, dx, dy, L = poisson_IG(nx, ny, xmax, xmin, ymax, ymin)\n",
+    "plot_3D(x, y, p_i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
